[package]
name = "ggpo-sys"
version = "0.1.0"
authors = ["FaultyRAM <316014+FaultyRAM@users.noreply.github.com>"]
edition = "2018"
description = "Raw, unsafe bindings to the GGPO rollback networking library."
readme = "README.md"
repository = "https://github.com/FaultyRAM/ggpo-sys"
license = "Apache-2.0 OR MIT"
keywords = ["rollback", "network", "netplay", "p2p", "online"]
categories = ["external-ffi-bindings", "game-development", "network-programming"]
links = "GGPO"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

[build-dependencies]
bindgen = "^0.53.0"
cc = { version = "^1.0.0", features = ["parallel"] }

# Include winapi as a dependency on Windows. winapi has in-depth support for linking against Windows
# libraries, and GGPO uses a few, so this saves us quite the hassle.
[target.'cfg(windows)'.dependencies.winapi]
version = "^0.3.0"
features = ["processenv", "processthreadsapi", "timeapi", "winsock2", "winuser", "ws2tcpip"]
